[project]
name = "langunittest"
version = "0.1.0"
description = "LLM agent to facilitate the generation of unit test cases."
authors = [
    {name = "johnklee",email = "puremonkey2001@yahoo.com.tw"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langfun (>=0.1.1,<0.2.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

